Added Creative mode tab and items file

--- a/src/main/resources/assets/gods_providence/lang/en_us.json
+++ b/src/main/resources/assets/gods_providence/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.gods_providence.titanium": "Titanium"
+  "item.gods_providence.titanium": "Titanium",
+
+  "creativetab.gods_providence_tab": "God's Providence"
 }
