Added new block and recipes

--- a/src/main/resources/assets/gods_providence/lang/en_us.json
+++ b/src/main/resources/assets/gods_providence/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "item.gods_providence.titanium": "Titanium",
 
+  "block.gods_providence.titanium_block": "Titanium Block",
+
   "creativetab.gods_providence_tab": "God's Providence"
 }
