New fluid and custom dimension files

--- a/src/main/resources/assets/gods_providence/lang/en_us.json
+++ b/src/main/resources/assets/gods_providence/lang/en_us.json
@@ -1,7 +1,9 @@
 {
   "item.gods_providence.titanium": "Titanium",
+  "item.gods_providence.dreams_water_bucket": "Dreams Bucket",
 
   "block.gods_providence.titanium_block": "Titanium Block",
+  "block.gods_providence.wet_sand": "Wet Sand",
 
   "creativetab.gods_providence_tab": "God's Providence"
 }
