Data generation dor json files

--- a/src/main/resources/assets/gods_providence/lang/en_us.json
+++ b/src/main/resources/assets/gods_providence/lang/en_us.json
@@ -4,6 +4,7 @@
 
   "block.gods_providence.titanium_block": "Titanium Block",
   "block.gods_providence.wet_sand": "Wet Sand",
+  "block.gods_providence.gold_oak_log": "Gold Oak Log",
 
   "creativetab.gods_providence_tab": "God's Providence"
 }
